dev-test-nginx/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: edu-hopeful-ritchie
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30341
      targetPort: 80
